--- a/cn.zh-cn/API参考/使用前必读.md
+++ b/cn.zh-cn/API参考/使用前必读.md
@@ -28,7 +28,7 @@
 <td class="cellrowborder" valign="top" width="73%" headers="mcps1.2.3.1.2 "><p id="p1521175820187"><a name="p1521175820187"></a><a name="p1521175820187"></a>了解使用REST API消息体组成、调用方法及示例。</p>
 </td>
 </tr>
-<tr id="row3526164617198"><td class="cellrowborder" valign="top" width="27%" headers="mcps1.2.3.1.1 "><p id="p75281446161913"><a name="p75281446161913"></a><a name="p75281446161913"></a>API</p>
+<tr id="row3526164617198"><td class="cellrowborder" valign="top" width="27%" headers="mcps1.2.3.1.1 "><p id="p75281446161913"><a name="p75281446161913"></a><a name="p75281446161913"></a>API说明</p>
 </td>
 <td class="cellrowborder" valign="top" width="73%" headers="mcps1.2.3.1.2 "><p id="p48531642171420"><a name="p48531642171420"></a><a name="p48531642171420"></a>云监控提供的API接口，包含API版本号管理、指标管理、告警规则管理、监控数据管理、配额管理、事件监控等。</p>
 </td>
