--- a/cn.zh-cn/API参考/创建告警规则.md
+++ b/cn.zh-cn/API参考/创建告警规则.md
@@ -181,7 +181,7 @@ POST /V1.0/\{project\_id\}/alarms
     </tr>
     <tr id="row57509222184830"><td class="cellrowborder" valign="top" width="31.313131313131315%" headers="mcps1.2.5.1.1 "><p id="p27735430184830"><a name="p27735430184830"></a><a name="p27735430184830"></a>alarm_actions</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p31977375184830"><a name="p31977375184830"></a><a name="p31977375184830"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p4949951171213"><a name="p4949951171213"></a><a name="p4949951171213"></a>条件必选</p>
     </td>
     <td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.5.1.3 "><p id="p40030552184830"><a name="p40030552184830"></a><a name="p40030552184830"></a>JSON数组</p>
     </td>
@@ -193,7 +193,8 @@ POST /V1.0/\{project\_id\}/alarms
     <div class="p" id="p63586966173216"><a name="p63586966173216"></a><a name="p63586966173216"></a>type取值：<a name="ul35411782173216"></a><a name="ul35411782173216"></a><ul id="ul35411782173216"><li>notification：通知。</li><li>autoscaling：弹性伸缩。</li></ul>
     </div>
     <p id="p45385622173216"><a name="p45385622173216"></a><a name="p45385622173216"></a>notificationList：告警状态发生变化时，被通知对象的列表。当type为notification时，notificationList列表不能为空；当type为autoscaling时，列表必须为[]。</p>
-    <div class="note" id="note3631127095920"><a name="note3631127095920"></a><a name="note3631127095920"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p5836598095920"><a name="p5836598095920"></a><a name="p5836598095920"></a>若要使autoscaling告警规则生效，必须绑定伸缩策略，具体操作请参考《AutoScaling接口参考》</p>
+    <div class="note" id="note3631127095920"><a name="note3631127095920"></a><a name="note3631127095920"></a><span class="notetitle"> 说明： </span><div class="notebody"><a name="ul13371203915152"></a><a name="ul13371203915152"></a><ul id="ul13371203915152"><li>若要使AutoScaling告警规则生效，必须绑定伸缩策略，具体操作请参考《AutoScaling接口参考》。</li><li>若alarm_action_enabled为true，对应的alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions至少有一个不能为空。<p id="p1337154516151"><a name="p1337154516151"></a><a name="p1337154516151"></a>若alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions同时存在时，notificationList值保持一致。</p>
+    </li></ul>
     </div></div>
     </td>
     </tr>
@@ -217,7 +218,7 @@ POST /V1.0/\{project\_id\}/alarms
     </tr>
     <tr id="row10022569184830"><td class="cellrowborder" valign="top" width="31.313131313131315%" headers="mcps1.2.5.1.1 "><p id="p6521770184830"><a name="p6521770184830"></a><a name="p6521770184830"></a>insufficientdata_actions</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p58501363184830"><a name="p58501363184830"></a><a name="p58501363184830"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p15290541945"><a name="p15290541945"></a><a name="p15290541945"></a>条件必选</p>
     </td>
     <td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.5.1.3 "><p id="p40989997184830"><a name="p40989997184830"></a><a name="p40989997184830"></a>JSON数组</p>
     </td>
@@ -225,12 +226,15 @@ POST /V1.0/\{project\_id\}/alarms
     <p id="p18263938184830"><a name="p18263938184830"></a><a name="p18263938184830"></a>结构如下：</p>
     <p id="p36784266194947"><a name="p36784266194947"></a><a name="p36784266194947"></a>{ "type": "notification","notificationList": ["urn:smn:region:68438a86d98e427e907e0097b7e35d47:sd"] }</p>
     <p id="p39705146194950"><a name="p39705146194950"></a><a name="p39705146194950"></a>type取值：</p>
-    <a name="ul43676731195119"></a><a name="ul43676731195119"></a><ul id="ul43676731195119"><li>notification：通知。</li><li>notificationList：告警状态发生变化时，被通知对象的列表。</li></ul>
+    <a name="ul43676731195119"></a><a name="ul43676731195119"></a><ul id="ul43676731195119"><li>notification：通知。</li><li>notificationList：告警状态发生变化时，被通知对象的列表。<div class="note" id="note12419425944"><a name="note12419425944"></a><a name="note12419425944"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p16164103131511"><a name="p16164103131511"></a><a name="p16164103131511"></a>若alarm_action_enabled为true，对应的alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions至少有一个不能为空。</p>
+    <p id="p111656317159"><a name="p111656317159"></a><a name="p111656317159"></a>若alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions同时存在时，notificationList值保持一致。</p>
+    </div></div>
+    </li></ul>
     </td>
     </tr>
     <tr id="row2983980184830"><td class="cellrowborder" valign="top" width="31.313131313131315%" headers="mcps1.2.5.1.1 "><p id="p40375810184830"><a name="p40375810184830"></a><a name="p40375810184830"></a>ok_actions</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p49215214184830"><a name="p49215214184830"></a><a name="p49215214184830"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p1228810557317"><a name="p1228810557317"></a><a name="p1228810557317"></a>条件必选</p>
     </td>
     <td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.5.1.3 "><p id="p27009365184830"><a name="p27009365184830"></a><a name="p27009365184830"></a>JSON数组</p>
     </td>
@@ -238,7 +242,10 @@ POST /V1.0/\{project\_id\}/alarms
     <p id="p26930481184830"><a name="p26930481184830"></a><a name="p26930481184830"></a>结构如下：</p>
     <p id="p22364435194918"><a name="p22364435194918"></a><a name="p22364435194918"></a>{ "type": "notification","notificationList": ["urn:smn:region:68438a86d98e427e907e0097b7e35d47:sd"] }</p>
     <p id="p35055428194925"><a name="p35055428194925"></a><a name="p35055428194925"></a>type取值：</p>
-    <a name="ul59795539195128"></a><a name="ul59795539195128"></a><ul id="ul59795539195128"><li>notification：通知。</li><li>notificationList：告警状态发生变化时，被通知对象的列表。</li></ul>
+    <a name="ul59795539195128"></a><a name="ul59795539195128"></a><ul id="ul59795539195128"><li>notification：通知。</li><li>notificationList：告警状态发生变化时，被通知对象的列表。<div class="note" id="note33010441244"><a name="note33010441244"></a><a name="note33010441244"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p483516202151"><a name="p483516202151"></a><a name="p483516202151"></a>若alarm_action_enabled为true，对应的alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions至少有一个不能为空。</p>
+    <p id="p15836820181517"><a name="p15836820181517"></a><a name="p15836820181517"></a>若alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions同时存在时，notificationList值保持一致。</p>
+    </div></div>
+    </li></ul>
     </td>
     </tr>
     <tr id="row33885327184830"><td class="cellrowborder" valign="top" width="31.313131313131315%" headers="mcps1.2.5.1.1 "><p id="p60356933184830"><a name="p60356933184830"></a><a name="p60356933184830"></a>alarm_enabled</p>
@@ -271,12 +278,14 @@ POST /V1.0/\{project\_id\}/alarms
     </tr>
     <tr id="row54523625184830"><td class="cellrowborder" valign="top" width="31.313131313131315%" headers="mcps1.2.5.1.1 "><p id="p54337493184830"><a name="p54337493184830"></a><a name="p54337493184830"></a>alarm_action_enabled</p>
     </td>
-    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p39260773184830"><a name="p39260773184830"></a><a name="p39260773184830"></a>否</p>
+    <td class="cellrowborder" valign="top" width="15.151515151515152%" headers="mcps1.2.5.1.2 "><p id="p39260773184830"><a name="p39260773184830"></a><a name="p39260773184830"></a>条件必选</p>
     </td>
     <td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.5.1.3 "><p id="p26006017184830"><a name="p26006017184830"></a><a name="p26006017184830"></a>Boolean</p>
     </td>
-    <td class="cellrowborder" valign="top" width="37.37373737373738%" headers="mcps1.2.5.1.4 "><p id="p36998199105620"><a name="p36998199105620"></a><a name="p36998199105620"></a>是否启用该条告警触发的动作，默认为true。注：若alarm_action_enabled为true，对应的alarm_actions、ok_actions至少有一个不能为空。</p>
-    <p id="p8500656173433"><a name="p8500656173433"></a><a name="p8500656173433"></a>若alarm_actions、ok_actions同时存在时，notificationList值保持一致。</p>
+    <td class="cellrowborder" valign="top" width="37.37373737373738%" headers="mcps1.2.5.1.4 "><p id="p943645314418"><a name="p943645314418"></a><a name="p943645314418"></a>是否启用该条告警触发的动作，默认为true。</p>
+    <div class="note" id="note11299541449"><a name="note11299541449"></a><a name="note11299541449"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p163612549420"><a name="p163612549420"></a><a name="p163612549420"></a>若alarm_action_enabled为true，对应的alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions至少有一个不能为空。</p>
+    <p id="p53917546419"><a name="p53917546419"></a><a name="p53917546419"></a>若alarm_actions、insufficientdata_actions（该参数已废弃，建议无需配置）、ok_actions同时存在时，notificationList值保持一致。</p>
+    </div></div>
     </td>
     </tr>
     </tbody>
@@ -321,9 +330,14 @@ POST /V1.0/\{project\_id\}/alarms
                 "type": "notification", 
                 "notificationList": ["urn:smn:region:68438a86d98e427e907e0097b7e35d48:sd"]
             }
+        ],
+        "insufficientdata_actions": [
+            {
+                "type": "notification", 
+                "notificationList": ["urn:smn:region:68438a86d98e427e907e0097b7e35d48:sd"]
+            }
         ]
     }
-    
     ```
 
 
