--- a/cn.zh-cn/API参考/弹性云服务器中操作系统监控的监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性云服务器中操作系统监控的监控指标说明.md
@@ -392,7 +392,7 @@ AGT.ECS
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.1.7.1.2 "><p id="p11896433181720"><a name="p11896433181720"></a><a name="p11896433181720"></a>（Agent）平均写操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p1089643391712"><a name="p1089643391712"></a><a name="p1089643391712"></a>该指标用于统计指定时间段内，平均每个写IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p1089643391712"><a name="p1089643391712"></a><a name="p1089643391712"></a>该指标用于统计指定时间段内，平均每个写I/O操作传输的字节数。</p>
 <p id="p12412202612205"><a name="p12412202612205"></a><a name="p12412202612205"></a>单位：KB/op</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.1.7.1.4 "><p id="p48963339175"><a name="p48963339175"></a><a name="p48963339175"></a>≥0 KB/op</p>
@@ -407,7 +407,7 @@ AGT.ECS
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.1.7.1.2 "><p id="p8459183619173"><a name="p8459183619173"></a><a name="p8459183619173"></a>（Agent）平均读操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p6459153681719"><a name="p6459153681719"></a><a name="p6459153681719"></a>该指标用于统计指定时间段内，平均每个读IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p6459153681719"><a name="p6459153681719"></a><a name="p6459153681719"></a>该指标用于统计指定时间段内，平均每个读I/O操作传输的字节数。</p>
 <p id="p373405611200"><a name="p373405611200"></a><a name="p373405611200"></a>单位：KB/op</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.1.7.1.4 "><p id="p84592036101714"><a name="p84592036101714"></a><a name="p84592036101714"></a>≥0 KB/op</p>
@@ -420,9 +420,9 @@ AGT.ECS
 </tr>
 <tr id="row13821311171"><td class="cellrowborder" valign="top" headers="mcps1.1.7.1.1 "><p id="p9831031121719"><a name="p9831031121719"></a><a name="p9831031121719"></a>disk_io_svctm</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.2 "><p id="p13832031101713"><a name="p13832031101713"></a><a name="p13832031101713"></a>（Agent）平均IO服务时长</p>
+<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.2 "><p id="p13832031101713"><a name="p13832031101713"></a><a name="p13832031101713"></a>（Agent）平均I/O服务时长</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p15838318178"><a name="p15838318178"></a><a name="p15838318178"></a>该指标用于统计指定时间段内，平均每个读或写IO的操作时长。</p>
+<td class="cellrowborder" valign="top" headers="mcps1.1.7.1.3 "><p id="p15838318178"><a name="p15838318178"></a><a name="p15838318178"></a>该指标用于统计指定时间段内，平均每个读或写I/O的操作时长。</p>
 <p id="p1743295919209"><a name="p1743295919209"></a><a name="p1743295919209"></a>单位：ms/op</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.1.7.1.4 "><p id="p3831631101715"><a name="p3831631101715"></a><a name="p3831631101715"></a>≥0 ms/op</p>
