--- a/cn.zh-cn/API参考/弹性云服务器监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性云服务器监控指标说明.md
@@ -64,7 +64,7 @@ SYS.ECS
 </tr>
 <tr id="zh-cn_topic_0022067719_row61501122112133"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p15534971112133"><a name="zh-cn_topic_0022067719_p15534971112133"></a><a name="zh-cn_topic_0022067719_p15534971112133"></a>disk_read_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p50373137112133"><a name="zh-cn_topic_0022067719_p50373137112133"></a><a name="zh-cn_topic_0022067719_p50373137112133"></a>磁盘读速率</p>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p292712452495"><a name="zh-cn_topic_0022067719_p292712452495"></a><a name="zh-cn_topic_0022067719_p292712452495"></a>磁盘读带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p53692267112133"><a name="zh-cn_topic_0022067719_p53692267112133"></a><a name="zh-cn_topic_0022067719_p53692267112133"></a>该指标用于统计每秒从测量对象读出数据量，以字节/秒为单位。</p>
 </td>
@@ -75,7 +75,7 @@ SYS.ECS
 </tr>
 <tr id="zh-cn_topic_0022067719_row65668128112133"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p17518185112133"><a name="zh-cn_topic_0022067719_p17518185112133"></a><a name="zh-cn_topic_0022067719_p17518185112133"></a>disk_write_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p9686886112133"><a name="zh-cn_topic_0022067719_p9686886112133"></a><a name="zh-cn_topic_0022067719_p9686886112133"></a>磁盘写速率</p>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p18939164514497"><a name="zh-cn_topic_0022067719_p18939164514497"></a><a name="zh-cn_topic_0022067719_p18939164514497"></a>磁盘写带宽</p>
 </td>
 <td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p46440320112133"><a name="zh-cn_topic_0022067719_p46440320112133"></a><a name="zh-cn_topic_0022067719_p46440320112133"></a>该指标用于统计每秒写到测量对象的数据量，以字节/秒为单位。</p>
 </td>
@@ -86,7 +86,7 @@ SYS.ECS
 </tr>
 <tr id="zh-cn_topic_0022067719_row42486756112133"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p18875184112133"><a name="zh-cn_topic_0022067719_p18875184112133"></a><a name="zh-cn_topic_0022067719_p18875184112133"></a>disk_read_requests_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p52494961112133"><a name="zh-cn_topic_0022067719_p52494961112133"></a><a name="zh-cn_topic_0022067719_p52494961112133"></a>磁盘读操作速率</p>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p59508458491"><a name="zh-cn_topic_0022067719_p59508458491"></a><a name="zh-cn_topic_0022067719_p59508458491"></a>磁盘读IOPS</p>
 </td>
 <td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p2615947105641"><a name="zh-cn_topic_0022067719_p2615947105641"></a><a name="zh-cn_topic_0022067719_p2615947105641"></a>该指标用于统计每秒从测量对象读取数据的请求次数，以请求/秒为单位。</p>
 </td>
@@ -97,7 +97,7 @@ SYS.ECS
 </tr>
 <tr id="zh-cn_topic_0022067719_row17645255112133"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p19979544112133"><a name="zh-cn_topic_0022067719_p19979544112133"></a><a name="zh-cn_topic_0022067719_p19979544112133"></a>disk_write_requests_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p7730333112133"><a name="zh-cn_topic_0022067719_p7730333112133"></a><a name="zh-cn_topic_0022067719_p7730333112133"></a>磁盘写操作速率</p>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p11969114513496"><a name="zh-cn_topic_0022067719_p11969114513496"></a><a name="zh-cn_topic_0022067719_p11969114513496"></a>磁盘写IOPS</p>
 </td>
 <td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p22177214112133"><a name="zh-cn_topic_0022067719_p22177214112133"></a><a name="zh-cn_topic_0022067719_p22177214112133"></a>该指标用于统计每秒从测量对象写数据的请求次数，以请求/秒为单位。</p>
 </td>
