--- a/cn.zh-cn/API参考/弹性伸缩监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性伸缩监控指标说明.md
@@ -13,9 +13,9 @@ SYS.AS
 <a name="zh-cn_topic_0043063076_table42148186162545"></a>
 <table><thead align="left"><tr id="zh-cn_topic_0043063076_row13442348162545"><th class="cellrowborder" valign="top" width="18.33%" id="mcps1.1.6.1.1"><p id="zh-cn_topic_0043063076_p1577902162545"><a name="zh-cn_topic_0043063076_p1577902162545"></a><a name="zh-cn_topic_0043063076_p1577902162545"></a>指标</p>
 </th>
-<th class="cellrowborder" valign="top" width="14.280000000000001%" id="mcps1.1.6.1.2"><p id="zh-cn_topic_0043063076_p11494523173333"><a name="zh-cn_topic_0043063076_p11494523173333"></a><a name="zh-cn_topic_0043063076_p11494523173333"></a>指标名称</p>
+<th class="cellrowborder" valign="top" width="14.27%" id="mcps1.1.6.1.2"><p id="zh-cn_topic_0043063076_p11494523173333"><a name="zh-cn_topic_0043063076_p11494523173333"></a><a name="zh-cn_topic_0043063076_p11494523173333"></a>指标名称</p>
 </th>
-<th class="cellrowborder" valign="top" width="21.060000000000002%" id="mcps1.1.6.1.3"><p id="zh-cn_topic_0043063076_p60701241162545"><a name="zh-cn_topic_0043063076_p60701241162545"></a><a name="zh-cn_topic_0043063076_p60701241162545"></a>含义</p>
+<th class="cellrowborder" valign="top" width="21.07%" id="mcps1.1.6.1.3"><p id="zh-cn_topic_0043063076_p60701241162545"><a name="zh-cn_topic_0043063076_p60701241162545"></a><a name="zh-cn_topic_0043063076_p60701241162545"></a>含义</p>
 </th>
 <th class="cellrowborder" valign="top" width="15.7%" id="mcps1.1.6.1.4"><p id="zh-cn_topic_0043063076_p24514578162614"><a name="zh-cn_topic_0043063076_p24514578162614"></a><a name="zh-cn_topic_0043063076_p24514578162614"></a>取值范围</p>
 </th>
@@ -25,9 +25,9 @@ SYS.AS
 </thead>
 <tbody><tr id="zh-cn_topic_0043063076_row9440258162545"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p26463451162545"><a name="zh-cn_topic_0043063076_p26463451162545"></a><a name="zh-cn_topic_0043063076_p26463451162545"></a>cpu_util</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p58641209173333"><a name="zh-cn_topic_0043063076_p58641209173333"></a><a name="zh-cn_topic_0043063076_p58641209173333"></a>CPU使用率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p58641209173333"><a name="zh-cn_topic_0043063076_p58641209173333"></a><a name="zh-cn_topic_0043063076_p58641209173333"></a>CPU使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p63164756162545"><a name="zh-cn_topic_0043063076_p63164756162545"></a><a name="zh-cn_topic_0043063076_p63164756162545"></a>该指标用于统计测试对象中所有云服务器的CPU使用率的均值。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p63164756162545"><a name="zh-cn_topic_0043063076_p63164756162545"></a><a name="zh-cn_topic_0043063076_p63164756162545"></a>该指标用于统计测试对象中所有云服务器的CPU使用率的均值。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p39523811162614"><a name="zh-cn_topic_0043063076_p39523811162614"></a><a name="zh-cn_topic_0043063076_p39523811162614"></a>≥0%</p>
 </td>
@@ -36,9 +36,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row31611892162545"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p10426432162545"><a name="zh-cn_topic_0043063076_p10426432162545"></a><a name="zh-cn_topic_0043063076_p10426432162545"></a>mem_util</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p52317499173333"><a name="zh-cn_topic_0043063076_p52317499173333"></a><a name="zh-cn_topic_0043063076_p52317499173333"></a>内存使用率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p52317499173333"><a name="zh-cn_topic_0043063076_p52317499173333"></a><a name="zh-cn_topic_0043063076_p52317499173333"></a>内存使用率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p39234689162545"><a name="zh-cn_topic_0043063076_p39234689162545"></a><a name="zh-cn_topic_0043063076_p39234689162545"></a>该指标用于统计测试对象中所有云服务器的内存使用率的均值。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p39234689162545"><a name="zh-cn_topic_0043063076_p39234689162545"></a><a name="zh-cn_topic_0043063076_p39234689162545"></a>该指标用于统计测试对象中所有云服务器的内存使用率的均值。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p47312124162614"><a name="zh-cn_topic_0043063076_p47312124162614"></a><a name="zh-cn_topic_0043063076_p47312124162614"></a>≥0%</p>
 </td>
@@ -49,9 +49,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row17567889162545"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p13712924162545"><a name="zh-cn_topic_0043063076_p13712924162545"></a><a name="zh-cn_topic_0043063076_p13712924162545"></a>network_incoming_bytes_rate_inband</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p9859050173333"><a name="zh-cn_topic_0043063076_p9859050173333"></a><a name="zh-cn_topic_0043063076_p9859050173333"></a>带内网络流入速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p9859050173333"><a name="zh-cn_topic_0043063076_p9859050173333"></a><a name="zh-cn_topic_0043063076_p9859050173333"></a>带内网络流入速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p37005072162545"><a name="zh-cn_topic_0043063076_p37005072162545"></a><a name="zh-cn_topic_0043063076_p37005072162545"></a>该指标用于统计测试对象中所有云服务器的网络流入速率的均值。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p37005072162545"><a name="zh-cn_topic_0043063076_p37005072162545"></a><a name="zh-cn_topic_0043063076_p37005072162545"></a>该指标用于统计测试对象中所有云服务器的网络流入速率的均值。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p7076870162614"><a name="zh-cn_topic_0043063076_p7076870162614"></a><a name="zh-cn_topic_0043063076_p7076870162614"></a>≥0 Byte/s</p>
 </td>
@@ -60,9 +60,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row64610192162545"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p66043059162545"><a name="zh-cn_topic_0043063076_p66043059162545"></a><a name="zh-cn_topic_0043063076_p66043059162545"></a>network_outgoing_bytes_rate_inband</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p60385581173333"><a name="zh-cn_topic_0043063076_p60385581173333"></a><a name="zh-cn_topic_0043063076_p60385581173333"></a>带内网络流出速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p60385581173333"><a name="zh-cn_topic_0043063076_p60385581173333"></a><a name="zh-cn_topic_0043063076_p60385581173333"></a>带内网络流出速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p47887571162545"><a name="zh-cn_topic_0043063076_p47887571162545"></a><a name="zh-cn_topic_0043063076_p47887571162545"></a>该指标用于统计测试对象中所有云服务器的网络流出速率的均值。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p47887571162545"><a name="zh-cn_topic_0043063076_p47887571162545"></a><a name="zh-cn_topic_0043063076_p47887571162545"></a>该指标用于统计测试对象中所有云服务器的网络流出速率的均值。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p834095511437"><a name="zh-cn_topic_0043063076_p834095511437"></a><a name="zh-cn_topic_0043063076_p834095511437"></a>≥0 Byte/s</p>
 </td>
@@ -71,21 +71,21 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row52369142104552"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p14042138104552"><a name="zh-cn_topic_0043063076_p14042138104552"></a><a name="zh-cn_topic_0043063076_p14042138104552"></a>instance_num</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p63671394104552"><a name="zh-cn_topic_0043063076_p63671394104552"></a><a name="zh-cn_topic_0043063076_p63671394104552"></a>实例数</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p63671394104552"><a name="zh-cn_topic_0043063076_p63671394104552"></a><a name="zh-cn_topic_0043063076_p63671394104552"></a>实例数</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p57109303104552"><a name="zh-cn_topic_0043063076_p57109303104552"></a><a name="zh-cn_topic_0043063076_p57109303104552"></a>该指标用于统计测试对象中可用的云服务器数量。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p57109303104552"><a name="zh-cn_topic_0043063076_p57109303104552"></a><a name="zh-cn_topic_0043063076_p57109303104552"></a>该指标用于统计测试对象中可用的云服务器数量。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p62450816104552"><a name="zh-cn_topic_0043063076_p62450816104552"></a><a name="zh-cn_topic_0043063076_p62450816104552"></a>≥0</p>
 </td>
 <td class="cellrowborder" valign="top" width="30.630000000000003%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0043063076_p6132165510369"><a name="zh-cn_topic_0043063076_p6132165510369"></a><a name="zh-cn_topic_0043063076_p6132165510369"></a>测试对象为弹性伸缩组。</p>
-<p id="zh-cn_topic_0043063076_p25351334104552"><a name="zh-cn_topic_0043063076_p25351334104552"></a><a name="zh-cn_topic_0043063076_p25351334104552"></a>可用的云服务器是指健康状态为“正常”的云服务器。</p>
+<p id="zh-cn_topic_0043063076_p25351334104552"><a name="zh-cn_topic_0043063076_p25351334104552"></a><a name="zh-cn_topic_0043063076_p25351334104552"></a>可用的云服务器是指伸缩组中生命周期状态为“INSERVICE”的实例。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0043063076_row16880356164247"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p52067206164320"><a name="zh-cn_topic_0043063076_p52067206164320"></a><a name="zh-cn_topic_0043063076_p52067206164320"></a>disk_read_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p56694156164320"><a name="zh-cn_topic_0043063076_p56694156164320"></a><a name="zh-cn_topic_0043063076_p56694156164320"></a>磁盘读速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p56694156164320"><a name="zh-cn_topic_0043063076_p56694156164320"></a><a name="zh-cn_topic_0043063076_p56694156164320"></a>磁盘读速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p28823894164320"><a name="zh-cn_topic_0043063076_p28823894164320"></a><a name="zh-cn_topic_0043063076_p28823894164320"></a>该指标用于统计每秒从测量对象中所有云服务器读出的数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p28823894164320"><a name="zh-cn_topic_0043063076_p28823894164320"></a><a name="zh-cn_topic_0043063076_p28823894164320"></a>该指标用于统计每秒从测量对象中所有云服务器读出的数据量，以字节/秒为单位。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p438577111428"><a name="zh-cn_topic_0043063076_p438577111428"></a><a name="zh-cn_topic_0043063076_p438577111428"></a>≥0 Byte/s</p>
 </td>
@@ -94,9 +94,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row49351834164253"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p4535684164320"><a name="zh-cn_topic_0043063076_p4535684164320"></a><a name="zh-cn_topic_0043063076_p4535684164320"></a>disk_write_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p31846129164320"><a name="zh-cn_topic_0043063076_p31846129164320"></a><a name="zh-cn_topic_0043063076_p31846129164320"></a>磁盘写速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p31846129164320"><a name="zh-cn_topic_0043063076_p31846129164320"></a><a name="zh-cn_topic_0043063076_p31846129164320"></a>磁盘写速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p29399675164320"><a name="zh-cn_topic_0043063076_p29399675164320"></a><a name="zh-cn_topic_0043063076_p29399675164320"></a>该指标用于统计每秒写到测量对象中所有云服务器的数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p29399675164320"><a name="zh-cn_topic_0043063076_p29399675164320"></a><a name="zh-cn_topic_0043063076_p29399675164320"></a>该指标用于统计每秒写到测量对象中所有云服务器的数据量，以字节/秒为单位。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p41383251164320"><a name="zh-cn_topic_0043063076_p41383251164320"></a><a name="zh-cn_topic_0043063076_p41383251164320"></a>≥0 Byte/s</p>
 </td>
@@ -105,9 +105,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row12355722164256"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p40894923164320"><a name="zh-cn_topic_0043063076_p40894923164320"></a><a name="zh-cn_topic_0043063076_p40894923164320"></a>disk_read_requests_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p24154492164320"><a name="zh-cn_topic_0043063076_p24154492164320"></a><a name="zh-cn_topic_0043063076_p24154492164320"></a>磁盘读操作速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p24154492164320"><a name="zh-cn_topic_0043063076_p24154492164320"></a><a name="zh-cn_topic_0043063076_p24154492164320"></a>磁盘读操作速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p10356874164320"><a name="zh-cn_topic_0043063076_p10356874164320"></a><a name="zh-cn_topic_0043063076_p10356874164320"></a>该指标用于统计每秒从测量对象中所有云服务器读取数据的请求次数，以请求/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p10356874164320"><a name="zh-cn_topic_0043063076_p10356874164320"></a><a name="zh-cn_topic_0043063076_p10356874164320"></a>该指标用于统计每秒从测量对象中所有云服务器读取数据的请求次数，以请求/秒为单位。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p33600476164320"><a name="zh-cn_topic_0043063076_p33600476164320"></a><a name="zh-cn_topic_0043063076_p33600476164320"></a>≥0请求/秒</p>
 </td>
@@ -116,9 +116,9 @@ SYS.AS
 </tr>
 <tr id="zh-cn_topic_0043063076_row13526122164259"><td class="cellrowborder" valign="top" width="18.33%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0043063076_p8904702164320"><a name="zh-cn_topic_0043063076_p8904702164320"></a><a name="zh-cn_topic_0043063076_p8904702164320"></a>disk_write_requests_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.280000000000001%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p50192242164320"><a name="zh-cn_topic_0043063076_p50192242164320"></a><a name="zh-cn_topic_0043063076_p50192242164320"></a>磁盘写操作速率</p>
+<td class="cellrowborder" valign="top" width="14.27%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0043063076_p50192242164320"><a name="zh-cn_topic_0043063076_p50192242164320"></a><a name="zh-cn_topic_0043063076_p50192242164320"></a>磁盘写操作速率</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.060000000000002%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p39039795164320"><a name="zh-cn_topic_0043063076_p39039795164320"></a><a name="zh-cn_topic_0043063076_p39039795164320"></a>该指标用于统计每秒往测量对象中所有云服务器写数据的请求次数，以请求/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="21.07%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0043063076_p39039795164320"><a name="zh-cn_topic_0043063076_p39039795164320"></a><a name="zh-cn_topic_0043063076_p39039795164320"></a>该指标用于统计每秒往测量对象中所有云服务器写数据的请求次数，以请求/秒为单位。</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.7%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0043063076_p8106792164320"><a name="zh-cn_topic_0043063076_p8106792164320"></a><a name="zh-cn_topic_0043063076_p8106792164320"></a>≥0请求/秒</p>
 </td>
