--- a/cn.zh-cn/API参考/弹性负载均衡监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性负载均衡监控指标说明.md
@@ -56,7 +56,7 @@ SYS.ELB
 </td>
 <td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p7076870162614"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p7076870162614"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p7076870162614"></a>≥0</p>
 </td>
-<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"></a>测量对象：增强型负载均衡器、增强型负责均衡监听器和经典型负载均衡器。</p>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p1024271216275"></a>测量对象：增强型负载均衡器、增强型负载均衡监听器和经典型负载均衡器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_row64610192162545"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p66043059162545"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p66043059162545"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p66043059162545"></a>m4_ncps</p>
@@ -68,7 +68,7 @@ SYS.ELB
 </td>
 <td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p36355625162614"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p36355625162614"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_zh-cn_topic_0021733202_p36355625162614"></a>≥0</p>
 </td>
-<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"></a>测量对象：增强型负载均衡器、增强型负责均衡监听器和经典型负载均衡器。</p>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p2775088019195"></a>测量对象：增强型负载均衡器、增强型负载均衡监听器和经典型负载均衡器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_row28018710191925"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p64642149191925"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p64642149191925"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p64642149191925"></a>m5_in_pps</p>
@@ -80,7 +80,7 @@ SYS.ELB
 </td>
 <td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p58256000191925"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p58256000191925"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p58256000191925"></a>≥0</p>
 </td>
-<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"></a>测量对象：增强型负载均衡器、增强型负责均衡监听器和经典型负载均衡器。</p>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p21115570191925"></a>测量对象：增强型负载均衡器、增强型负载均衡监听器和经典型负载均衡器。</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_row33356979191927"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p9585668191927"><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p9585668191927"></a><a name="zh-cn_topic_0109418599_zh-cn_topic_0021772779_p9585668191927"></a>m6_out_pps</p>
@@ -169,7 +169,7 @@ SYS.ELB
 <td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p15422303456"><a name="zh-cn_topic_0109418599_p15422303456"></a><a name="zh-cn_topic_0109418599_p15422303456"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0109418599_row819865312594"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p19793113217314"><a name="zh-cn_topic_0109418599_p19793113217314"></a><a name="zh-cn_topic_0109418599_p19793113217314"></a>mc_l7_http_3xx</p>
+<tr id="zh-cn_topic_0109418599_row819865312594"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p19793113217314"><a name="zh-cn_topic_0109418599_p19793113217314"></a><a name="zh-cn_topic_0109418599_p19793113217314"></a>md_l7_http_3xx</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p679718321936"><a name="zh-cn_topic_0109418599_p679718321936"></a><a name="zh-cn_topic_0109418599_p679718321936"></a>七层协议返回码(3XX)</p>
 </td>
@@ -182,7 +182,7 @@ SYS.ELB
 <td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p138064324317"><a name="zh-cn_topic_0109418599_p138064324317"></a><a name="zh-cn_topic_0109418599_p138064324317"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0109418599_row73059591235"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p199722222415"><a name="zh-cn_topic_0109418599_p199722222415"></a><a name="zh-cn_topic_0109418599_p199722222415"></a>mc_l7_http_4xx</p>
+<tr id="zh-cn_topic_0109418599_row73059591235"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p199722222415"><a name="zh-cn_topic_0109418599_p199722222415"></a><a name="zh-cn_topic_0109418599_p199722222415"></a>me_l7_http_4xx</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p1197472218418"><a name="zh-cn_topic_0109418599_p1197472218418"></a><a name="zh-cn_topic_0109418599_p1197472218418"></a>七层协议返回码(4XX)</p>
 </td>
@@ -195,7 +195,7 @@ SYS.ELB
 <td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p1097852218416"><a name="zh-cn_topic_0109418599_p1097852218416"></a><a name="zh-cn_topic_0109418599_p1097852218416"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0109418599_row101613379411"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p1641322051"><a name="zh-cn_topic_0109418599_p1641322051"></a><a name="zh-cn_topic_0109418599_p1641322051"></a>mc_l7_http_5xx</p>
+<tr id="zh-cn_topic_0109418599_row101613379411"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p1641322051"><a name="zh-cn_topic_0109418599_p1641322051"></a><a name="zh-cn_topic_0109418599_p1641322051"></a>mf_l7_http_5xx</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p94151221356"><a name="zh-cn_topic_0109418599_p94151221356"></a><a name="zh-cn_topic_0109418599_p94151221356"></a>七层协议返回码(5XX)</p>
 </td>
@@ -247,7 +247,7 @@ SYS.ELB
 <td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p116615592711"><a name="zh-cn_topic_0109418599_p116615592711"></a><a name="zh-cn_topic_0109418599_p116615592711"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0109418599_row157896145820"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p878917141789"><a name="zh-cn_topic_0109418599_p878917141789"></a><a name="zh-cn_topic_0109418599_p878917141789"></a>m12_l7_http_502</p>
+<tr id="zh-cn_topic_0109418599_row157896145820"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p878917141789"><a name="zh-cn_topic_0109418599_p878917141789"></a><a name="zh-cn_topic_0109418599_p878917141789"></a>m13_l7_http_502</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p137899141784"><a name="zh-cn_topic_0109418599_p137899141784"></a><a name="zh-cn_topic_0109418599_p137899141784"></a>七层协议返回码(502)</p>
 </td>
@@ -264,13 +264,52 @@ SYS.ELB
 </td>
 <td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p1618471098"><a name="zh-cn_topic_0109418599_p1618471098"></a><a name="zh-cn_topic_0109418599_p1618471098"></a>七层协议RT</p>
 </td>
-<td class="cellrowborder" valign="top" width="31.003100310031%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0109418599_p01810713912"><a name="zh-cn_topic_0109418599_p01810713912"></a><a name="zh-cn_topic_0109418599_p01810713912"></a>统计负载均衡的平均响应时间。</p>
-<p id="zh-cn_topic_0109418599_p98601327291"><a name="zh-cn_topic_0109418599_p98601327291"></a><a name="zh-cn_topic_0109418599_p98601327291"></a>单位：毫秒。</p>
+<td class="cellrowborder" valign="top" width="31.003100310031%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0109418599_p01810713912"><a name="zh-cn_topic_0109418599_p01810713912"></a><a name="zh-cn_topic_0109418599_p01810713912"></a>统计测量对象当前7层平均响应时间。</p>
+<p id="zh-cn_topic_0109418599_p80523"><a name="zh-cn_topic_0109418599_p80523"></a><a name="zh-cn_topic_0109418599_p80523"></a>单位：毫秒。</p>
 <p id="zh-cn_topic_0109418599_p1890411611213"><a name="zh-cn_topic_0109418599_p1890411611213"></a><a name="zh-cn_topic_0109418599_p1890411611213"></a>（http和https监听器才有此指标）</p>
 </td>
 <td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_p59692714106"><a name="zh-cn_topic_0109418599_p59692714106"></a><a name="zh-cn_topic_0109418599_p59692714106"></a>≥0</p>
 </td>
 <td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p149724717102"><a name="zh-cn_topic_0109418599_p149724717102"></a><a name="zh-cn_topic_0109418599_p149724717102"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0109418599_row094711571614"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p13724145613513"><a name="zh-cn_topic_0109418599_p13724145613513"></a><a name="zh-cn_topic_0109418599_p13724145613513"></a>m15_l7_upstream_4xx</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p3758153516187"><a name="zh-cn_topic_0109418599_p3758153516187"></a><a name="zh-cn_topic_0109418599_p3758153516187"></a>七层后端返回码(4XX)</p>
+</td>
+<td class="cellrowborder" valign="top" width="31.003100310031%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0109418599_p579181916136"><a name="zh-cn_topic_0109418599_p579181916136"></a><a name="zh-cn_topic_0109418599_p579181916136"></a>统计测量对象当前7层后端4XX系列状态响应码的数量。</p>
+<p id="zh-cn_topic_0109418599_p979141981313"><a name="zh-cn_topic_0109418599_p979141981313"></a><a name="zh-cn_topic_0109418599_p979141981313"></a>单位：个/秒。</p>
+<p id="zh-cn_topic_0109418599_p181181921311"><a name="zh-cn_topic_0109418599_p181181921311"></a><a name="zh-cn_topic_0109418599_p181181921311"></a>（http和https监听器才有此指标）</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_p19724456155116"><a name="zh-cn_topic_0109418599_p19724456155116"></a><a name="zh-cn_topic_0109418599_p19724456155116"></a>≥0</p>
+</td>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p472410567517"><a name="zh-cn_topic_0109418599_p472410567517"></a><a name="zh-cn_topic_0109418599_p472410567517"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0109418599_row15433152715167"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p55406316521"><a name="zh-cn_topic_0109418599_p55406316521"></a><a name="zh-cn_topic_0109418599_p55406316521"></a>m16_l7_upstream_5xx</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p984182014165"><a name="zh-cn_topic_0109418599_p984182014165"></a><a name="zh-cn_topic_0109418599_p984182014165"></a>七层后端返回码(5XX)</p>
+</td>
+<td class="cellrowborder" valign="top" width="31.003100310031%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0109418599_p187361836141615"><a name="zh-cn_topic_0109418599_p187361836141615"></a><a name="zh-cn_topic_0109418599_p187361836141615"></a>统计测量对象当前7层后端5XX系列状态响应码的数量。</p>
+<p id="zh-cn_topic_0109418599_p8737136171610"><a name="zh-cn_topic_0109418599_p8737136171610"></a><a name="zh-cn_topic_0109418599_p8737136171610"></a>单位：个/秒。</p>
+<p id="zh-cn_topic_0109418599_p17739163618162"><a name="zh-cn_topic_0109418599_p17739163618162"></a><a name="zh-cn_topic_0109418599_p17739163618162"></a>（http和https监听器才有此指标）</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_p3540235522"><a name="zh-cn_topic_0109418599_p3540235522"></a><a name="zh-cn_topic_0109418599_p3540235522"></a>≥0</p>
+</td>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p1054018312521"><a name="zh-cn_topic_0109418599_p1054018312521"></a><a name="zh-cn_topic_0109418599_p1054018312521"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0109418599_row129631222131611"><td class="cellrowborder" valign="top" width="16.001600160016%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0109418599_p96069497515"><a name="zh-cn_topic_0109418599_p96069497515"></a><a name="zh-cn_topic_0109418599_p96069497515"></a>m17_l7_upstream_rt</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.001400140014%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0109418599_p1115611517176"><a name="zh-cn_topic_0109418599_p1115611517176"></a><a name="zh-cn_topic_0109418599_p1115611517176"></a>七层后端的RT</p>
+</td>
+<td class="cellrowborder" valign="top" width="31.003100310031%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0109418599_p37333256173"><a name="zh-cn_topic_0109418599_p37333256173"></a><a name="zh-cn_topic_0109418599_p37333256173"></a>统计测量对象当前7层后端平均响应时间。</p>
+<p id="zh-cn_topic_0109418599_p15734172514173"><a name="zh-cn_topic_0109418599_p15734172514173"></a><a name="zh-cn_topic_0109418599_p15734172514173"></a>单位：毫秒。</p>
+<p id="zh-cn_topic_0109418599_p1773782511711"><a name="zh-cn_topic_0109418599_p1773782511711"></a><a name="zh-cn_topic_0109418599_p1773782511711"></a>（http和https监听器才有此指标）</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.001300130013%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0109418599_p1960614494512"><a name="zh-cn_topic_0109418599_p1960614494512"></a><a name="zh-cn_topic_0109418599_p1960614494512"></a>≥0</p>
+</td>
+<td class="cellrowborder" valign="top" width="25.992599259925992%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0109418599_p560619495517"><a name="zh-cn_topic_0109418599_p560619495517"></a><a name="zh-cn_topic_0109418599_p560619495517"></a>测量对象：增强型负载均衡器和增强型负载均衡监听器。</p>
 </td>
 </tr>
 </tbody>
