--- a/cn.zh-cn/API参考/附录.md
+++ b/cn.zh-cn/API参考/附录.md
@@ -58,7 +58,7 @@
 
 -   **[图像识别监控指标说明](图像识别监控指标说明.md)**  
 
--   **[内容检测监控指标说明](内容检测监控指标说明.md)**  
+-   **[内容审核监控指标说明](内容审核监控指标说明.md)**  
 
 -   **[语音合成监控指标说明](语音合成监控指标说明.md)**  
 
