--- a/cn.zh-cn/API参考/云搜索服务监控指标说明.md
+++ b/cn.zh-cn/API参考/云搜索服务监控指标说明.md
@@ -32,7 +32,7 @@ SYS.ES
 <td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.1.6.1.4 "><p id="p1431964322314"><a name="p1431964322314"></a><a name="p1431964322314"></a>0,1,2</p>
 <p id="p1812933419343"><a name="p1812933419343"></a><a name="p1812933419343"></a>0表示健康状态，1表示亚健康状态，2表示集群异常。</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.21212121212121%" headers="mcps1.1.6.1.5 "><p id="p1932044312237"><a name="p1932044312237"></a><a name="p1932044312237"></a>云搜索服务</p>
+<td class="cellrowborder" valign="top" width="21.21212121212121%" headers="mcps1.1.6.1.5 "><p id="p1932044312237"><a name="p1932044312237"></a><a name="p1932044312237"></a>CSS集群</p>
 </td>
 </tr>
 <tr id="row2272193812219"><td class="cellrowborder" valign="top" width="10.101010101010102%" headers="mcps1.1.6.1.1 "><p id="p207641617184420"><a name="p207641617184420"></a><a name="p207641617184420"></a>disk_util</p>
@@ -40,11 +40,11 @@ SYS.ES
 <td class="cellrowborder" valign="top" width="12.121212121212121%" headers="mcps1.1.6.1.2 "><p id="p776471711444"><a name="p776471711444"></a><a name="p776471711444"></a>磁盘使用率</p>
 </td>
 <td class="cellrowborder" valign="top" width="34.343434343434346%" headers="mcps1.1.6.1.3 "><p id="p9255915115817"><a name="p9255915115817"></a><a name="p9255915115817"></a>该指标用于统计测量对象的磁盘使用率。</p>
-<p id="p17648171448"><a name="p17648171448"></a><a name="p17648171448"></a>单位：百分比。</p>
+<p id="p17648171448"><a name="p17648171448"></a><a name="p17648171448"></a>单位：百分比</p>
 </td>
 <td class="cellrowborder" valign="top" width="22.222222222222225%" headers="mcps1.1.6.1.4 "><p id="p1676461734411"><a name="p1676461734411"></a><a name="p1676461734411"></a>0-100%</p>
 </td>
-<td class="cellrowborder" valign="top" width="21.21212121212121%" headers="mcps1.1.6.1.5 "><p id="p1576471784413"><a name="p1576471784413"></a><a name="p1576471784413"></a>云搜索服务</p>
+<td class="cellrowborder" valign="top" width="21.21212121212121%" headers="mcps1.1.6.1.5 "><p id="p173746537577"><a name="p173746537577"></a><a name="p173746537577"></a>CSS集群</p>
 </td>
 </tr>
 </tbody>
