--- a/cn.zh-cn/API参考/云硬盘监控指标说明.md
+++ b/cn.zh-cn/API参考/云硬盘监控指标说明.md
@@ -23,53 +23,53 @@ SYS.EVS
 </th>
 </tr>
 </thead>
-<tbody><tr id="zh-cn_topic_0044524897_row50997128104710"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0044524897_p37126664104710"><a name="zh-cn_topic_0044524897_p37126664104710"></a><a name="zh-cn_topic_0044524897_p37126664104710"></a>disk_device_read_bytes_rate</p>
+<tbody><tr id="row1610913035210"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p1332384419524"><a name="p1332384419524"></a><a name="p1332384419524"></a>disk_device_read_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0044524897_p54469780104710"><a name="zh-cn_topic_0044524897_p54469780104710"></a><a name="zh-cn_topic_0044524897_p54469780104710"></a>磁盘读速率</p>
+<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p1132534417525"><a name="p1132534417525"></a><a name="p1132534417525"></a>磁盘读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0044524897_p49976085104710"><a name="zh-cn_topic_0044524897_p49976085104710"></a><a name="zh-cn_topic_0044524897_p49976085104710"></a>该指标用于统计每秒从测量对象读出数据量。</p>
-<p id="p125875305537"><a name="p125875305537"></a><a name="p125875305537"></a>单位:字节/秒。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p1332614415523"><a name="p1332614415523"></a><a name="p1332614415523"></a>该指标用于统计每秒从测量对象读出数据量。</p>
+<p id="p1832614414527"><a name="p1832614414527"></a><a name="p1832614414527"></a>单位:字节/秒。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0044524897_p13890567104710"><a name="zh-cn_topic_0044524897_p13890567104710"></a><a name="zh-cn_topic_0044524897_p13890567104710"></a>≥ 0 bytes/s</p>
-<p id="zh-cn_topic_0044524897_p2999837211611"><a name="zh-cn_topic_0044524897_p2999837211611"></a><a name="zh-cn_topic_0044524897_p2999837211611"></a></p>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p3330244105216"><a name="p3330244105216"></a><a name="p3330244105216"></a>≥ 0 bytes/s</p>
+<p id="p3332744175213"><a name="p3332744175213"></a><a name="p3332744175213"></a></p>
 </td>
-<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0044524897_p51394180104710"><a name="zh-cn_topic_0044524897_p51394180104710"></a><a name="zh-cn_topic_0044524897_p51394180104710"></a>云硬盘</p>
-</td>
-</tr>
-<tr id="zh-cn_topic_0044524897_row2179041104710"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0044524897_p42284614104710"><a name="zh-cn_topic_0044524897_p42284614104710"></a><a name="zh-cn_topic_0044524897_p42284614104710"></a>disk_device_write_bytes_rate</p>
-</td>
-<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0044524897_p2501724104710"><a name="zh-cn_topic_0044524897_p2501724104710"></a><a name="zh-cn_topic_0044524897_p2501724104710"></a>磁盘写速率</p>
-</td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0044524897_p1313098104710"><a name="zh-cn_topic_0044524897_p1313098104710"></a><a name="zh-cn_topic_0044524897_p1313098104710"></a>该指标用于统计每秒写到测量对象的数据量。</p>
-<p id="p1063752705315"><a name="p1063752705315"></a><a name="p1063752705315"></a>单位:字节/秒。</p>
-</td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0044524897_p61599234104710"><a name="zh-cn_topic_0044524897_p61599234104710"></a><a name="zh-cn_topic_0044524897_p61599234104710"></a>≥ 0 bytes/s</p>
-</td>
-<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0044524897_p23482086104710"><a name="zh-cn_topic_0044524897_p23482086104710"></a><a name="zh-cn_topic_0044524897_p23482086104710"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p12334174495215"><a name="p12334174495215"></a><a name="p12334174495215"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0044524897_row23000814104710"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0044524897_p51126659104710"><a name="zh-cn_topic_0044524897_p51126659104710"></a><a name="zh-cn_topic_0044524897_p51126659104710"></a>disk_device_read_requests_rate</p>
+<tr id="row915633818528"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p833534413522"><a name="p833534413522"></a><a name="p833534413522"></a>disk_device_write_bytes_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0044524897_p47618700104710"><a name="zh-cn_topic_0044524897_p47618700104710"></a><a name="zh-cn_topic_0044524897_p47618700104710"></a>磁盘读操作速率</p>
+<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p203387443523"><a name="p203387443523"></a><a name="p203387443523"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0044524897_p766469185751"><a name="zh-cn_topic_0044524897_p766469185751"></a><a name="zh-cn_topic_0044524897_p766469185751"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
-<p id="p14831124155320"><a name="p14831124155320"></a><a name="p14831124155320"></a>单位:请求/秒。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p4339114419522"><a name="p4339114419522"></a><a name="p4339114419522"></a>该指标用于统计每秒写到测量对象的数据量。</p>
+<p id="p1534112445524"><a name="p1534112445524"></a><a name="p1534112445524"></a>单位:字节/秒。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0044524897_p36566478104710"><a name="zh-cn_topic_0044524897_p36566478104710"></a><a name="zh-cn_topic_0044524897_p36566478104710"></a>≥ 0 requests/second</p>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p133431844115213"><a name="p133431844115213"></a><a name="p133431844115213"></a>≥ 0 bytes/s</p>
 </td>
-<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0044524897_p9094771104710"><a name="zh-cn_topic_0044524897_p9094771104710"></a><a name="zh-cn_topic_0044524897_p9094771104710"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p9345104414527"><a name="p9345104414527"></a><a name="p9345104414527"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0044524897_row65587873104710"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0044524897_p11017471104710"><a name="zh-cn_topic_0044524897_p11017471104710"></a><a name="zh-cn_topic_0044524897_p11017471104710"></a>disk_device_write_requests_rate</p>
+<tr id="row165911356524"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p20346174415522"><a name="p20346174415522"></a><a name="p20346174415522"></a>disk_device_read_requests_rate</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0044524897_p19999925104710"><a name="zh-cn_topic_0044524897_p19999925104710"></a><a name="zh-cn_topic_0044524897_p19999925104710"></a>磁盘写操作速率</p>
+<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p20349124455216"><a name="p20349124455216"></a><a name="p20349124455216"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p1894178195319"><a name="p1894178195319"></a><a name="p1894178195319"></a>该指标用于统计每秒写到测量对象的请求次数。</p>
-<p id="zh-cn_topic_0044524897_p640652095737"><a name="zh-cn_topic_0044524897_p640652095737"></a><a name="zh-cn_topic_0044524897_p640652095737"></a>单位:请求/秒。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p5350184455210"><a name="p5350184455210"></a><a name="p5350184455210"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
+<p id="p123505444524"><a name="p123505444524"></a><a name="p123505444524"></a>单位:请求/秒。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0044524897_p64371397104710"><a name="zh-cn_topic_0044524897_p64371397104710"></a><a name="zh-cn_topic_0044524897_p64371397104710"></a>≥ 0 requests/second</p>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p1035114415524"><a name="p1035114415524"></a><a name="p1035114415524"></a>≥ 0 requests/second</p>
 </td>
-<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0044524897_p46700629104710"><a name="zh-cn_topic_0044524897_p46700629104710"></a><a name="zh-cn_topic_0044524897_p46700629104710"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p17354144185215"><a name="p17354144185215"></a><a name="p17354144185215"></a>云硬盘</p>
+</td>
+</tr>
+<tr id="row1087763285220"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p735510449529"><a name="p735510449529"></a><a name="p735510449529"></a>disk_device_write_requests_rate</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p23561944115211"><a name="p23561944115211"></a><a name="p23561944115211"></a>磁盘写IOPS</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p3357144413526"><a name="p3357144413526"></a><a name="p3357144413526"></a>该指标用于统计每秒写到测量对象的请求次数。</p>
+<p id="p0358344135218"><a name="p0358344135218"></a><a name="p0358344135218"></a>单位:请求/秒。</p>
+</td>
+<td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p3361144495218"><a name="p3361144495218"></a><a name="p3361144495218"></a>≥ 0 requests/second</p>
+</td>
+<td class="cellrowborder" valign="top" width="23.49%" headers="mcps1.1.6.1.5 "><p id="p13362104445216"><a name="p13362104445216"></a><a name="p13362104445216"></a>云硬盘</p>
 </td>
 </tr>
 <tr id="row199613508493"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p620042335218"><a name="p620042335218"></a><a name="p620042335218"></a>disk_device_queue_length</p>
@@ -100,7 +100,7 @@ SYS.EVS
 </td>
 <td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p499845814498"><a name="p499845814498"></a><a name="p499845814498"></a>平均写操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p8409538280"><a name="p8409538280"></a><a name="p8409538280"></a>该指标用于统计测量对象测量周期内平均每个写IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p8409538280"><a name="p8409538280"></a><a name="p8409538280"></a>该指标用于统计测量对象测量周期内平均每个写I/O操作传输的字节数。</p>
 <p id="p0409143812812"><a name="p0409143812812"></a><a name="p0409143812812"></a>单位:KB/op。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p7998205815491"><a name="p7998205815491"></a><a name="p7998205815491"></a>≥ 0 KB/op</p>
@@ -112,7 +112,7 @@ SYS.EVS
 </td>
 <td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p5246356174915"><a name="p5246356174915"></a><a name="p5246356174915"></a>平均读操作大小</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p113383203718"><a name="p113383203718"></a><a name="p113383203718"></a>该指标用于统计测量对象测量周期内平均每个读IO操作传输的字节数。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p113383203718"><a name="p113383203718"></a><a name="p113383203718"></a>该指标用于统计测量对象测量周期内平均每个读I/O操作传输的字节数。</p>
 <p id="p12339152019715"><a name="p12339152019715"></a><a name="p12339152019715"></a>单位:KB/op。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p112463563498"><a name="p112463563498"></a><a name="p112463563498"></a>≥ KB/op</p>
@@ -124,7 +124,7 @@ SYS.EVS
 </td>
 <td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p335911116315"><a name="p335911116315"></a><a name="p335911116315"></a>平均写操作耗时</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p4562113818612"><a name="p4562113818612"></a><a name="p4562113818612"></a>该指标用于统计测量对象测量周期内平均每个写IO的操作时长。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p4562113818612"><a name="p4562113818612"></a><a name="p4562113818612"></a>该指标用于统计测量对象测量周期内平均每个写I/O的操作时长。</p>
 <p id="p35620388615"><a name="p35620388615"></a><a name="p35620388615"></a>单位:ms/操作。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p9825353164917"><a name="p9825353164917"></a><a name="p9825353164917"></a>≥ 0 ms/operation</p>
@@ -136,7 +136,7 @@ SYS.EVS
 </td>
 <td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p728104125011"><a name="p728104125011"></a><a name="p728104125011"></a>平均读操作耗时</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p179002168612"><a name="p179002168612"></a><a name="p179002168612"></a>该指标用于统计测量对象测量周期内平均每个读IO的操作时长。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p179002168612"><a name="p179002168612"></a><a name="p179002168612"></a>该指标用于统计测量对象测量周期内平均每个读I/O的操作时长。</p>
 <p id="p179016161861"><a name="p179016161861"></a><a name="p179016161861"></a>单位:ms/操作。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p3281124135010"><a name="p3281124135010"></a><a name="p3281124135010"></a>≥ 0 ms/operation</p>
@@ -146,9 +146,9 @@ SYS.EVS
 </tr>
 <tr id="row19484817499"><td class="cellrowborder" valign="top" width="15.15%" headers="mcps1.1.6.1.1 "><p id="p14202223145215"><a name="p14202223145215"></a><a name="p14202223145215"></a>disk_device_io_svctm</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p1994204813492"><a name="p1994204813492"></a><a name="p1994204813492"></a>平均IO服务时长</p>
+<td class="cellrowborder" valign="top" width="14.14%" headers="mcps1.1.6.1.2 "><p id="p1994204813492"><a name="p1994204813492"></a><a name="p1994204813492"></a>平均I/O服务时长</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p13139107726"><a name="p13139107726"></a><a name="p13139107726"></a>该指标用于统计测量对象测量周期内平均每个读或写IO的服务时长。</p>
+<td class="cellrowborder" valign="top" width="32.93%" headers="mcps1.1.6.1.3 "><p id="p13139107726"><a name="p13139107726"></a><a name="p13139107726"></a>该指标用于统计测量对象测量周期内平均每个读或写I/O的服务时长。</p>
 <p id="p1914015715219"><a name="p1914015715219"></a><a name="p1914015715219"></a>单位:ms/操作。</p>
 </td>
 <td class="cellrowborder" valign="top" width="14.29%" headers="mcps1.1.6.1.4 "><p id="p39424824917"><a name="p39424824917"></a><a name="p39424824917"></a>≥ 0 ms/operation</p>
