--- a/cn.zh-cn/API参考/弹性文件服务监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性文件服务监控指标说明.md
@@ -11,9 +11,9 @@ SYS.SFS
 ## 监控指标<a name="section31039493153328"></a>
 
 <a name="table31171041153328"></a>
-<table><thead align="left"><tr id="row42397114153328"><th class="cellrowborder" valign="top" width="15.310000000000002%" id="mcps1.1.6.1.1"><p id="p11614228153328"><a name="p11614228153328"></a><a name="p11614228153328"></a>指标</p>
+<table><thead align="left"><tr id="row42397114153328"><th class="cellrowborder" valign="top" width="15.299999999999999%" id="mcps1.1.6.1.1"><p id="p11614228153328"><a name="p11614228153328"></a><a name="p11614228153328"></a>指标</p>
 </th>
-<th class="cellrowborder" valign="top" width="16.33%" id="mcps1.1.6.1.2"><p id="p1228402153328"><a name="p1228402153328"></a><a name="p1228402153328"></a>指标名称</p>
+<th class="cellrowborder" valign="top" width="16.34%" id="mcps1.1.6.1.2"><p id="p1228402153328"><a name="p1228402153328"></a><a name="p1228402153328"></a>指标名称</p>
 </th>
 <th class="cellrowborder" valign="top" width="35.870000000000005%" id="mcps1.1.6.1.3"><p id="p32391741153328"><a name="p32391741153328"></a><a name="p32391741153328"></a>含义</p>
 </th>
@@ -23,35 +23,38 @@ SYS.SFS
 </th>
 </tr>
 </thead>
-<tbody><tr id="row3298232153328"><td class="cellrowborder" valign="top" width="15.310000000000002%" headers="mcps1.1.6.1.1 "><p id="p42751914173912"><a name="p42751914173912"></a><a name="p42751914173912"></a>read_bandwidth</p>
+<tbody><tr id="row3298232153328"><td class="cellrowborder" valign="top" width="15.299999999999999%" headers="mcps1.1.6.1.1 "><p id="p42751914173912"><a name="p42751914173912"></a><a name="p42751914173912"></a>read_bandwidth</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.1.6.1.2 "><p id="p1227531423917"><a name="p1227531423917"></a><a name="p1227531423917"></a>读带宽</p>
+<td class="cellrowborder" valign="top" width="16.34%" headers="mcps1.1.6.1.2 "><p id="p1227531423917"><a name="p1227531423917"></a><a name="p1227531423917"></a>读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p15275514113912"><a name="p15275514113912"></a><a name="p15275514113912"></a>该指标用于统计测量对象在周期内的读数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p15275514113912"><a name="p15275514113912"></a><a name="p15275514113912"></a>该指标用于统计文件系统在周期内的读数据量。</p>
+<p id="p192563149569"><a name="p192563149569"></a><a name="p192563149569"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p9072094155224"><a name="p9072094155224"></a><a name="p9072094155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p9072094155224"><a name="p9072094155224"></a><a name="p9072094155224"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="19.17%" headers="mcps1.1.6.1.5 "><p id="p63750977155224"><a name="p63750977155224"></a><a name="p63750977155224"></a>文件共享</p>
 </td>
 </tr>
-<tr id="row21884471153328"><td class="cellrowborder" valign="top" width="15.310000000000002%" headers="mcps1.1.6.1.1 "><p id="p1527512146393"><a name="p1527512146393"></a><a name="p1527512146393"></a>write_bandwidth</p>
+<tr id="row21884471153328"><td class="cellrowborder" valign="top" width="15.299999999999999%" headers="mcps1.1.6.1.1 "><p id="p1527512146393"><a name="p1527512146393"></a><a name="p1527512146393"></a>write_bandwidth</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.1.6.1.2 "><p id="p0275161413911"><a name="p0275161413911"></a><a name="p0275161413911"></a>写带宽</p>
+<td class="cellrowborder" valign="top" width="16.34%" headers="mcps1.1.6.1.2 "><p id="p0275161413911"><a name="p0275161413911"></a><a name="p0275161413911"></a>写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p527691413398"><a name="p527691413398"></a><a name="p527691413398"></a>该指标用于统计测量对象在周期内的写数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p527691413398"><a name="p527691413398"></a><a name="p527691413398"></a>该指标用于统计文件系统在周期内的写数据量</p>
+<p id="p267311455718"><a name="p267311455718"></a><a name="p267311455718"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p65044683155224"><a name="p65044683155224"></a><a name="p65044683155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p05381407578"><a name="p05381407578"></a><a name="p05381407578"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="19.17%" headers="mcps1.1.6.1.5 "><p id="p34127948155224"><a name="p34127948155224"></a><a name="p34127948155224"></a>文件共享</p>
 </td>
 </tr>
-<tr id="row58957821154029"><td class="cellrowborder" valign="top" width="15.310000000000002%" headers="mcps1.1.6.1.1 "><p id="p32761214133911"><a name="p32761214133911"></a><a name="p32761214133911"></a>rw_bandwidth</p>
+<tr id="row58957821154029"><td class="cellrowborder" valign="top" width="15.299999999999999%" headers="mcps1.1.6.1.1 "><p id="p32761214133911"><a name="p32761214133911"></a><a name="p32761214133911"></a>rw_bandwidth</p>
 </td>
-<td class="cellrowborder" valign="top" width="16.33%" headers="mcps1.1.6.1.2 "><p id="p7276614173915"><a name="p7276614173915"></a><a name="p7276614173915"></a>读写带宽</p>
+<td class="cellrowborder" valign="top" width="16.34%" headers="mcps1.1.6.1.2 "><p id="p7276614173915"><a name="p7276614173915"></a><a name="p7276614173915"></a>读写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p162085814429"><a name="p162085814429"></a><a name="p162085814429"></a>该指标用于统计测量对象在周期内的读写数据量，以字节/秒为单位。</p>
+<td class="cellrowborder" valign="top" width="35.870000000000005%" headers="mcps1.1.6.1.3 "><p id="p162085814429"><a name="p162085814429"></a><a name="p162085814429"></a>该指标用于统计文件系统在周期内的读写数据量。</p>
+<p id="p127232169573"><a name="p127232169573"></a><a name="p127232169573"></a>单位：字节/秒</p>
 </td>
-<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p8260756155224"><a name="p8260756155224"></a><a name="p8260756155224"></a>≥ 0 Byte/s</p>
+<td class="cellrowborder" valign="top" width="13.320000000000002%" headers="mcps1.1.6.1.4 "><p id="p8260756155224"><a name="p8260756155224"></a><a name="p8260756155224"></a>≥ 0 bytes/s</p>
 </td>
 <td class="cellrowborder" valign="top" width="19.17%" headers="mcps1.1.6.1.5 "><p id="p65141501155224"><a name="p65141501155224"></a><a name="p65141501155224"></a>文件共享</p>
 </td>
