--- a/cn.zh-cn/API参考/添加监控数据.md
+++ b/cn.zh-cn/API参考/添加监控数据.md
@@ -103,7 +103,7 @@ POST /V1.0/\{project\_id\}/metric-data
     </td>
     <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p47697329195021"><a name="p47697329195021"></a><a name="p47697329195021"></a>数值类型</p>
     </td>
-    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p38278423195021"><a name="p38278423195021"></a><a name="p38278423195021"></a>数据的有效期，超出该有效期则自动删除该数据，单位秒，最大值604800。</p>
+    <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p38278423195021"><a name="p38278423195021"></a><a name="p38278423195021"></a>数据的有效期，超出该有效期则自动删除该数据，单位秒，取值范围(0-604800]。</p>
     </td>
     </tr>
     <tr id="row4745219920316"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p1842289220316"><a name="p1842289220316"></a><a name="p1842289220316"></a>collect_time</p>
@@ -134,6 +134,8 @@ POST /V1.0/\{project\_id\}/metric-data
     <td class="cellrowborder" valign="top" width="16.91830816918308%" headers="mcps1.2.5.1.3 "><p id="p3584913420526"><a name="p3584913420526"></a><a name="p3584913420526"></a>字符串</p>
     </td>
     <td class="cellrowborder" valign="top" width="36.27637236276372%" headers="mcps1.2.5.1.4 "><p id="p1809877420526"><a name="p1809877420526"></a><a name="p1809877420526"></a>数据的单位。</p>
+    <div class="note" id="note19594957449"><a name="note19594957449"></a><a name="note19594957449"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p35951359442"><a name="p35951359442"></a><a name="p35951359442"></a>最大长度为32位。</p>
+    </div></div>
     </td>
     </tr>
     <tr id="row5567263220554"><td class="cellrowborder" valign="top" width="30.826917308269174%" headers="mcps1.2.5.1.1 "><p id="p1318930920554"><a name="p1318930920554"></a><a name="p1318930920554"></a>type</p>
